--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@auth0/angular-jwt": "^3.0.0",
+    "@types/underscore": "^1.9.3",
     "angular-6-social-login": "^1.1.1",
+    "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "underscore": "^1.9.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
