--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@syncfusion/ej2-angular-calendars": "^17.3.14",
     "@types/underscore": "^1.9.3",
     "angular-6-social-login": "^1.1.1",
+    "ng-multiselect-dropdown": "^0.2.6",
     "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
