--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@auth0/angular-jwt": "^3.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@syncfusion/ej2-angular-calendars": "^17.3.14",
     "@types/underscore": "^1.9.3",
     "angular-6-social-login": "^1.1.1",
