--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0",
+    "@angular/animations": "^8.0.3",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
@@ -29,6 +29,7 @@
     "jspdf-autotable": "^3.2.5",
     "ng-multiselect-dropdown": "^0.2.6",
     "ngx-spinner": "^8.0.3",
+    "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "underscore": "^1.9.1",
