--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jspdf": "^1.4.1",
     "jspdf-autotable": "^3.2.5",
     "ng-multiselect-dropdown": "^0.2.6",
+    "ng2-validation": "^4.2.0",
     "ngx-spinner": "^8.0.3",
     "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
