--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.3",
+    "@angular/animations": "^8.2.12",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@auth0/angular-jwt": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
-    "@syncfusion/ej2-angular-calendars": "^17.3.14",
+    "@syncfusion/ej2-angular-calendars": "^17.3.20",
     "@types/underscore": "^1.9.3",
     "angular-6-social-login": "^1.1.1",
+    "hammerjs": "^2.0.8",
     "jspdf": "^1.4.1",
     "jspdf-autotable": "^3.2.5",
     "ng-multiselect-dropdown": "^0.2.6",
