--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@syncfusion/ej2-angular-calendars": "^17.3.20",
     "@types/underscore": "^1.9.3",
     "angular-6-social-login": "^1.1.1",
+    "angular-weather-widget": "^1.2.4",
     "hammerjs": "^2.0.8",
     "jspdf": "^1.4.1",
     "jspdf-autotable": "^3.2.5",
