--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "hammerjs": "^2.0.8",
     "jspdf": "^1.4.1",
     "jspdf-autotable": "^3.2.5",
-    "ng-multiselect-dropdown": "^0.2.6",
+    "ng-multiselect-dropdown": "0.2.4",
     "ng2-validation": "^4.2.0",
-    "ngx-spinner": "^8.0.3",
-    "ngx-toastr": "^11.1.2",
+    "ngx-spinner": "8.0.3",
+    "ngx-toastr": "11.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "underscore": "^1.9.1",
@@ -59,6 +59,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.0"
   }
 }
