--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ng-multiselect-dropdown": "0.2.4",
     "ng2-validation": "^4.2.0",
     "ngx-infinite-scroll": "^8.0.1",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-spinner": "8.0.3",
     "ngx-toastr": "11.1.2",
     "rxjs": "~6.4.0",
